--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/MainActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailsActivity"
+            android:name=".details.DetailsActivity"
             android:label="@string/title_activity_details"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -26,6 +27,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.abhishek.popularmovies.MainActivity" />
         </activity>
+
+        <provider
+            android:authorities="com.abhishek.popularmovies"
+            android:name=".data.MovieProvider" />
     </application>
 
 </manifest>
